# smart_home

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  global-rules.md  smart_home_server.implementation_plan.md  smart_home_server.spec.md
backend/: Cargo.toml
backend/src/: cli.rs  config.rs  lib.rs  logger.rs  main.rs  state.rs
backend/src/domain/: automation.rs  dashboard.rs  device.rs  error.rs  manager.rs  mod.rs  presence.rs  scene.rs  script.rs
backend/src/http/: errors.rs  helpers.rs  middleware.rs  mod.rs  router.rs  types.rs
backend/src/http/handlers/: areas.rs  auth.rs  automation.rs  commission.rs  dashboards.rs  devices.rs  discovery.rs  ecosystem.rs  energy.rs  entities.rs  matter.rs  mod.rs  mqtt.rs  presence.rs  scenes.rs  scripts.rs  system.rs
backend/src/infrastructure/: automation_loop.rs  db.rs  device_control.rs  matter.rs  matter_control.rs  mdns.rs  mod.rs  mqtt.rs  script_executor.rs  sun.rs  template.rs  webhook.rs
backend/tests/: binary_integration.rs
benches/: smart_home_bench.rs
contracts/: openapi.yaml
docs/: smart-home-20hr-mastery-plan.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/public/: manifest.json  sw.js
migrations/: 001_initial_schema.sql
scripts/: dev.sh  gen-types.sh
skills/rust-engineer/: SKILL.md
src/: automation.rs  cli.rs  db.rs  discovery.rs  lib.rs  logger.rs  manager.rs  models.rs  server.rs  ui.html
tests/: binary_integration.rs
(+154 files in other folders)
