[package]
name = "smart_home"
version = "0.1.0"
edition = "2024"
description = "A smart home management system"

[dependencies]
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "net"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tower = "0.5"
